server and db are working :)

--- a/my_crow_mongo_app/Dockerfile
+++ b/my_crow_mongo_app/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build the MongoDB C++ Driver
+# Stage 2: Build the MongoDB C++ Driver
 FROM ubuntu:22.04 as mongocxx-builder
 WORKDIR /lib
 
@@ -12,8 +12,7 @@ RUN apt-get update && apt-get install -y \
     libssl-dev \
     libsasl2-dev \
     git \
-    wget \
-    curl
+    wget
 
 # Environment variables to define versions
 ENV MONGO_CXX_DRIVER_VERSION=3.10.1
@@ -27,12 +26,6 @@ RUN wget https://github.com/mongodb/mongo-cxx-driver/releases/download/r${MONGO_
             -DCMAKE_INSTALL_PREFIX=/usr/local && \
     cmake --build . && \
     make install
-
-# Create the SimpleJSON directory and change the working directory to it
-WORKDIR /SimpleJSON
-
-# Download the json.hpp file from the specified URL into the SimpleJSON directory
-RUN curl https://raw.githubusercontent.com/nbsdx/SimpleJSON/master/json.hpp -o json.hpp
 
 # Optional: Compile your application with the MongoDB C++ Driver
 # RUN c++ --std=c++11 <input>.cpp $(pkg-config --cflags --libs libmongocxx)
@@ -52,14 +45,20 @@ RUN apt-get update && \
     pkg-config \
     libssl-dev \
     libsasl2-dev \
-    # libboost-all-dev \
+    libboost-all-dev \
     libasio-dev \
     make \
     git \
-    wget
+    wget \
+    curl
 
 # Assuming you might still need MongoDB C++ Driver installed
 COPY --from=mongocxx-builder /usr/local /usr/local
+
+ENV LD_LIBRARY_PATH /usr/local/lib:$LD_LIBRARY_PATH
+
+# Download SimpleJSON
+RUN curl -o /usr/local/include/json.hpp https://raw.githubusercontent.com/nbsdx/SimpleJSON/master/json.hpp
 
 # Clone Crow repository
 RUN git clone https://github.com/CrowCpp/Crow.git && \
@@ -73,11 +72,11 @@ COPY ./inc /app/inc
 
 # Compile your Crow application
 # Adjust the compilation command as needed, especially library paths if necessary
-RUN g++ -std=c++17 -o mycrowapp /app/src/main.cpp -lpthread
+RUN g++ -std=c++17 -o mycrowapp /app/src/main.cpp  -I/usr/local/include/mongocxx/v_noabi -I/usr/local/include/bsoncxx/v_noabi -lboost_system -lpthread -lcrypto \
+-lssl -lmongocxx -lbsoncxx
 
 # Expose the port your Crow application uses
 EXPOSE 18080
 
 # Command to run your Crow application
 CMD ["./mycrowapp"]
-
