--- a/my_crow_mongo_app/compose.yaml
+++ b/my_crow_mongo_app/compose.yaml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - db
     environment:
-      MONGO_URI: mongodb://db:27017/mydatabase
+      MONGO_URI: mongodb://db:27017
 
   db:
     image: mongo:latest
