--- a/my_crow_mongo_app/compose.yaml
+++ b/my_crow_mongo_app/compose.yaml
@@ -1,8 +1,17 @@
 services:
-  web:
+  web1:
     build: .
     ports:
-      - "18080:18080"
+      - "18081:18080"
+    depends_on:
+      - db
+    environment:
+      MONGO_URI: mongodb://db:27017
+
+  web2:
+    build: .
+    ports:
+      - "18082:18080"
     depends_on:
       - db
     environment:
@@ -15,5 +24,15 @@ services:
     volumes:
       - mongodb_data_container:/data/db
 
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    depends_on:
+      - web1
+      - web2
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    
 volumes:
   mongodb_data_container:
