--- a/my_crow_mongo_app/compose.yaml
+++ b/my_crow_mongo_app/compose.yaml
@@ -1,5 +1,15 @@
 services:
-  web1:
+  frontend:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    depends_on:
+      - backend1
+      - backend2
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+
+  backend1:
     build: .
     ports:
       - "18081:18080"
@@ -8,7 +18,7 @@ services:
     environment:
       MONGO_URI: mongodb://db:27017
 
-  web2:
+  backend2:
     build: .
     ports:
       - "18082:18080"
@@ -24,15 +34,6 @@ services:
     volumes:
       - mongodb_data_container:/data/db
 
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    depends_on:
-      - web1
-      - web2
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
     
 volumes:
   mongodb_data_container:
