--- a/my_crow_mongo_app/nginx.conf
+++ b/my_crow_mongo_app/nginx.conf
@@ -17,8 +17,8 @@ http {
 
     # Load balancer configuration
     upstream crow_app {
-        server web1:18080;
-        server web2:18080;
+        server backend1:18080;
+        server backend2:18080;
     }
 
     server {
