--- a/my_crow_mongo_app/nginx.conf
+++ b/my_crow_mongo_app/nginx.conf
@@ -1,5 +1,4 @@
-user  nginx;
-worker_processes  1;
+worker_processes 10;
 
 events {
     worker_connections  1024;
@@ -17,12 +16,13 @@ http {
 
     # Load balancer configuration
     upstream crow_app {
-        server backend1:18080;
-        server backend2:18080;
+        least_conn;
+        server backend1:18080 weight=5;
+        server backend2:18080 weight=5;
     }
 
     server {
-        listen 80;
+        listen 8080;
 
         location / {
             proxy_pass http://crow_app;
