--- a/my_crow_mongo_app/compose.yaml
+++ b/my_crow_mongo_app/compose.yaml
@@ -7,6 +7,8 @@ services:
       - db
     environment:
       MONGO_URI: mongodb://db:27017
+    networks:
+      - crow-network
 
   backend2:
     build: .
@@ -16,6 +18,8 @@ services:
       - db
     environment:
       MONGO_URI: mongodb://db:27017
+    networks:
+      - crow-network
 
   db:
     image: mongo:latest
@@ -23,6 +27,8 @@ services:
       - "27017:27017"
     volumes:
       - mongodb_data_container:/data/db
+    networks:
+      - crow-network
 
   load_balancer:
     image: nginx:latest
@@ -33,7 +39,12 @@ services:
       - backend2
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - crow-network
 
     
 volumes:
   mongodb_data_container:
+
+networks:
+  crow-network:
