chore: remove weight=5

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,8 +17,8 @@ http {
     # Load balancer configuration
     upstream crow_app {
         least_conn;
-        server backend1:18080 weight=5;
-        server backend2:18080 weight=5;
+        server backend1:18080;
+        server backend2:18080;
     }
 
     server {
